front end api connection with backend and dialogflow, proxy middleware created, database and scraper project started, chatbot component on front end created, chat bot ui front end updated with some modifications,  cookies for unique user session started

--- a/package.json
+++ b/package.json
@@ -4,22 +4,29 @@
   "description": "Admissions advice bot",
   "main": "index.js",
   "engines": {
-    "node": "16.15.0",
-    "npm": "8.5.2"
+    "node": "16.2.0",
+    "npm": "7.13.0"
   },
   "scripts": {
     "start": "node index.js",
-    "backend": "nodemon index.js"
+    "backend": "nodemon index.js",
+    "frontend": "npm run start --prefix ui",
+    "dev": "concurrently \"npm run backend\" \"npm run frontend\""
   },
   "author": "Isaac Isewede",
   "license": "ISC",
   "dependencies": {
+    "actions-on-google": "^3.0.0",
     "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
     "dialogflow": "^1.2.0",
     "express": "^4.18.1",
+    "grpc": "^1.24.11",
+    "mongodb": "^4.8.1",
     "pb-util": "^1.0.3"
   },
   "devDependencies": {
+    "concurrently": "^7.3.0",
     "nodemon": "^2.0.19"
   }
 }
